Fix extra padding on grabbers in Gtk3.22

--- a/data/stylesheet.css
+++ b/data/stylesheet.css
@@ -4,6 +4,10 @@
     padding: 0px;
 }
 
+.icon-shadow {
+    -gtk-icon-shadow: 0px 0px 3px black;
+}
+
 .slide-list {
     background-color: shade(@bg_color, 0.75);
     border-right: solid 1px rgba(0,0,0,0.75);
